--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-scripts": "5.0.0",
     "react-toggle-dark-mode": "^1.0.4",
     "tailwindcss": "^3.0.23",
+    "uuid": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
